--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -2,27 +2,65 @@
    Animations
    ========================================================================== */
 
-.animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}.animated.hinge{-webkit-animation-duration:2s;-moz-animation-duration:2s;-ms-animation-duration:2s;-o-animation-duration:2s;animation-duration:2s;}
+.animated {
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.animated.hinge {
+  -webkit-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  -ms-animation-duration: 2s;
+  -o-animation-duration: 2s;
+  animation-duration: 2s;
+}
 
 /* 
    Fade in
    ========================================================================== */
 
 @-webkit-keyframes fadeIn {
-  0% {opacity: 0;}  
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
+
 @-moz-keyframes fadeIn {
-  0% {opacity: 0;}  
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
+
 @-o-keyframes fadeIn {
-  0% {opacity: 0;}  
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
+
 @keyframes fadeIn {
-  0% {opacity: 0;}  
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .fadeIn {
@@ -42,16 +80,18 @@
     -webkit-transform: translateY(0);
   }
 }
+
 @-moz-keyframes fadeInDown {
   0% {
     opacity: 0;
     -moz-transform: translateY(-20px);
-  } 
+  }
   100% {
     opacity: 1;
     -moz-transform: translateY(0);
   }
 }
+
 @-o-keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -62,6 +102,7 @@
     -o-transform: translateY(0);
   }
 }
+
 @keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -90,6 +131,7 @@
     -webkit-transform: translateY(0);
   }
 }
+
 @-moz-keyframes fadeInDownBig {
   0% {
     opacity: 0;
@@ -100,6 +142,7 @@
     -moz-transform: translateY(0);
   }
 }
+
 @-o-keyframes fadeInDownBig {
   0% {
     opacity: 0;
@@ -110,6 +153,7 @@
     -o-transform: translateY(0);
   }
 }
+
 @keyframes fadeInDownBig {
   0% {
     opacity: 0;
@@ -148,6 +192,7 @@
     -webkit-transform: scale(1);
   }
 }
+
 @-moz-keyframes bounceIn {
   0% {
     opacity: 0;
@@ -164,6 +209,7 @@
     -moz-transform: scale(1);
   }
 }
+
 @-o-keyframes bounceIn {
   0% {
     opacity: 0;
@@ -180,6 +226,7 @@
     -o-transform: scale(1);
   }
 }
+
 @keyframes bounceIn {
   0% {
     opacity: 0;
@@ -209,16 +256,16 @@
     opacity: 0;
     -webkit-transform: translateY(-2000px);
   }
-  
+
   60% {
     opacity: 1;
     -webkit-transform: translateY(30px);
   }
-  
+
   80% {
     -webkit-transform: translateY(-10px);
   }
-  
+
   100% {
     -webkit-transform: translateY(0);
   }
@@ -229,16 +276,16 @@
     opacity: 0;
     -moz-transform: translateY(-2000px);
   }
-  
+
   60% {
     opacity: 1;
     -moz-transform: translateY(30px);
   }
-  
+
   80% {
     -moz-transform: translateY(-10px);
   }
-  
+
   100% {
     -moz-transform: translateY(0);
   }
@@ -249,16 +296,16 @@
     opacity: 0;
     -o-transform: translateY(-2000px);
   }
-  
+
   60% {
     opacity: 1;
     -o-transform: translateY(30px);
   }
-  
+
   80% {
     -o-transform: translateY(-10px);
   }
-  
+
   100% {
     -o-transform: translateY(0);
   }
@@ -269,16 +316,16 @@
     opacity: 0;
     transform: translateY(-2000px);
   }
-  
+
   60% {
     opacity: 1;
     transform: translateY(30px);
   }
-  
+
   80% {
     transform: translateY(-10px);
   }
-  
+
   100% {
     transform: translateY(0);
   }
@@ -298,31 +345,34 @@
 @-webkit-keyframes drop {
   0% {
     -webkit-transform: translateY(-500px);
-  } 
+  }
   100% {
     -webkit-transform: translateY(0);
   }
 }
+
 @-moz-keyframes drop {
   0% {
     -moz-transform: translateY(-500px);
-  } 
+  }
   100% {
     -moz-transform: translateY(0);
   }
 }
+
 @-o-keyframes drop {
   0% {
     -o-transform: translateY(-500px);
-  } 
+  }
   100% {
     -o-transform: translateY(0);
   }
 }
+
 @keyframes drop {
   0% {
     transform: translateY(-500px);
-  } 
+  }
   100% {
     transform: translateY(0);
   }
@@ -345,12 +395,14 @@
     opacity: 0;
   }
 }
+
 @-moz-keyframes MenuAnimOut {
   100% {
     -moz-transform: translateZ(300px);
     opacity: 0;
   }
 }
+
 @keyframes MenuAnimOut {
   100% {
     transform: translateZ(300px);
@@ -368,6 +420,7 @@
     opacity: 1;
   }
 }
+
 @-moz-keyframes MenuAnimIn {
   0% {
     -moz-transform: translateZ(300px);
@@ -378,6 +431,7 @@
     opacity: 1;
   }
 }
+
 @keyframes MenuAnimIn {
   0% {
     transform: translateZ(300px);
@@ -399,6 +453,7 @@
     opacity: 1;
   }
 }
+
 @-moz-keyframes SubMenuAnimIn {
   0% {
     -moz-transform: translateZ(-300px);
@@ -409,6 +464,7 @@
     opacity: 1;
   }
 }
+
 @keyframes SubMenuAnimIn {
   0% {
     transform: translateZ(-300px);
@@ -430,6 +486,7 @@
     opacity: 0;
   }
 }
+
 @-moz-keyframes SubMenuAnimOut {
   0% {
     -moz-transform: translateZ(0px);
@@ -440,6 +497,7 @@
     opacity: 0;
   }
 }
+
 @keyframes SubMenuAnimOut {
   0% {
     transform: translateZ(0px);
