--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,5 @@ layout: default
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
-    <div id="disqus_thread"></div>
+    <!--<div id="disqus_thread"></div>-->
 </div>
