--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -22,6 +22,7 @@
   ~ SOFTWARE.
   -->
 {% if site.disqus_shortname %}
+<div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
