--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,10 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+{% include social-share.html %}
     {% include disqus_comments.html %}
 </div>
+
 
 <div class="related">
   <h2>Related Posts</h2>
