--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,3 +1,4 @@
+<!-- Facebook pre load script-->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -5,18 +6,40 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.7&appId=536840986519268";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+
+
+
+
+</script>
+<!-- Facebook pre load script -->
+
 <div>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<g:plus action="share" annotation="none"></g:plus>
-<a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
-<style media="screen" type="text/css">
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <g:plus action="share" annotation="none"></g:plus>
+    <!-- Google -->
+
+    <!-- Twitter -->
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <!-- Twitter -->
+
+    <div class="fb-share-button" data-href="{{site.url}}{{page.url}}" data-layout="button"
+         data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank"
+                                                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
+    </div>
+
+    <!-- Facebook alignment -->
+    <style media="screen" type="text/css">
         .fb_iframe_widget span 
         {
             vertical-align: baseline !important;
         }
-        </style>
+
+    </style>
+
+    <!-- Facebook alignment -->
 </div>
 
 
