--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,5 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
  {% seo %}
+  {% include analytics.html %}
 </head>
